{
  "actions": {
    "delete": "削除",
    "ok": "OK",
    "cancel": "キャンセル",
    "save": "保存",
    "tryAgain": "再試行",
    "close": "閉じる"
  },
  "appSearchField": {
...
